--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "id": "obsidian-regex-search",
+  "id": "regex-search",
   "name": "Regex Search",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "minAppVersion": "0.15.0",
   "description": "跨文件和单文件正则表达式搜索插件",
   "author": "Tongtong Zhang",
